fix #6 allow scrollbar

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2011,7 +2011,8 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden; }
+  /*overflow: hidden;*/
+}
 
 #main {
   height: 100%;
